# HSE-Algorithms-24-25

./: CMakeLists.txt
A1/: A1.ipynb  A1.txt  README.md  main.cpp
A2/: A2.ipynb  README.md  arrayGenerator.cpp  arrayGenerator.h  main.cpp  sort.h  sortTester.h
A2/data/: m+i-10.txt  m+i-100.txt  m+i-20.txt  m+i-200.txt  m+i-30.txt  m+i-300.txt  m+i-400.txt  m+i-5.txt  m+i-50.txt  merge.txt
A3/: A3.ipynb  README.md  arrayGenerator.h  main.cpp  sort.h
A3/data/: intro.txt  quick.txt
P1/: main.cpp
P2/: main.cpp
P3/: main.cpp
P4/: main.cpp
P5/: main.cpp
P6/: main.cpp
